<?xml version="1.0"?>
<package format="2">
  <name>emcl2</name>
  <version>0.0.0</version>
  <description>The emcl2 package</description>

  <maintainer email="ryuichiueda@gmail.com">Ryuichi Ueda</maintainer>
  <license>LGPL</license>

  <url type="website">https://github.com/ryuichiueda/emcl2/</url>

  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_msgs</depend>
  <depend>tf2_geometry_msgs</depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>

  <depend>roscpp</depend>

  <buildtool_depend>catkin</buildtool_depend>

</package>
